// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletSelectionComponent rendering initial render without error 1`] = `
<div
  class="MuiGrid-container-13 MuiGrid-spacing-xs-24-37 MuiGrid-direction-xs-column-16 MuiGrid-justify-xs-center-30"
>
  <div
    class="MuiGrid-item-14"
  >
    <div
      class="MuiGrid-container-13"
    >
      <div
        class="MuiGrid-item-14"
      >
        <h6
          class="MuiTypography-root-110 MuiTypography-h6-127 MuiTypography-alignLeft-132"
        >
          Choose your wallet
        </h6>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-item-14"
  >
    <div
      class="MuiGrid-container-13 MuiGrid-align-items-xs-center-21 MuiGrid-justify-xs-center-30"
    >
      <div
        class="MuiGrid-item-14"
      >
        <div
          class="MuiGrid-container-13 MuiGrid-direction-xs-column-16 MuiGrid-align-items-xs-center-21 SquareButtonComponent-btn-146"
          jutify="center"
        >
          <div
            class="MuiGrid-item-14 SquareButtonComponent-imgContainer-156"
          >
            <img
              alt="wallet-logo"
              class="SquareButtonComponent-btnLogo-149"
              src="drive-wallet-button.png"
            />
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnTitle-150"
            >
              Drive
            </p>
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnDesc-151"
            >
              Use Drive Wallet
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-item-14"
      >
        <div
          class="MuiGrid-container-13 MuiGrid-direction-xs-column-16 MuiGrid-align-items-xs-center-21 SquareButtonComponent-btn-146"
          jutify="center"
        >
          <div
            class="MuiGrid-item-14 SquareButtonComponent-imgContainer-156"
          >
            <img
              alt="wallet-logo"
              class="SquareButtonComponent-btnLogo-149"
              src="metamask-button.png"
            />
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnTitle-150"
            >
              Metamask
            </p>
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnDesc-151"
            >
              MetaMask Extension
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-item-14"
      >
        <div
          class="MuiGrid-container-13 MuiGrid-direction-xs-column-16 MuiGrid-align-items-xs-center-21 SquareButtonComponent-btn-146"
          jutify="center"
        >
          <div
            class="MuiGrid-item-14 SquareButtonComponent-imgContainer-156"
          >
            <img
              alt="wallet-logo"
              class="SquareButtonComponent-btnLogo-149"
              src="ledger-button.png"
            />
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnTitle-150"
            >
              Ledger
            </p>
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnDesc-151"
            >
              Ledger Hardware Wallet
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-item-14"
  >
    <div
      class="MuiGrid-container-13 MuiGrid-spacing-xs-24-37 MuiGrid-justify-xs-center-30"
    >
      <div
        class="MuiGrid-item-14"
      >
        <button
          class="MuiButtonBase-root-183 MuiButton-root-157 MuiButton-text-159 MuiButton-textPrimary-160 MuiButton-flat-162 MuiButton-flatPrimary-163"
          tabindex="0"
          to="/"
          type="button"
        >
          <span
            class="MuiButton-label-158"
          >
            Cancel Transfer
          </span>
          <span
            class="MuiTouchRipple-root-186"
          />
        </button>
      </div>
      <div
        class="MuiGrid-item-14"
      >
        <button
          class="MuiButtonBase-root-183 MuiButtonBase-disabled-184 MuiButton-root-157 MuiButton-contained-168 MuiButton-containedPrimary-169 MuiButton-raised-171 MuiButton-raisedPrimary-172 MuiButton-sizeLarge-181 MuiButton-disabled-177 MuiButton-fullWidth-182"
          disabled=""
          id="continue"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-158"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletSelectionComponent rendering select ledger and DAI 1`] = `
<div
  class="MuiGrid-container-13 MuiGrid-spacing-xs-24-37 MuiGrid-direction-xs-column-16 MuiGrid-justify-xs-center-30"
>
  <div
    class="MuiGrid-item-14"
  >
    <div
      class="MuiGrid-container-13"
    >
      <div
        class="MuiGrid-item-14"
      >
        <h6
          class="MuiTypography-root-110 MuiTypography-h6-127 MuiTypography-alignLeft-132"
        >
          Choose your wallet
        </h6>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-item-14"
  >
    <div
      class="MuiGrid-container-13 MuiGrid-align-items-xs-center-21 MuiGrid-justify-xs-center-30"
    >
      <div
        class="MuiGrid-item-14"
      >
        <div
          class="MuiGrid-container-13 MuiGrid-direction-xs-column-16 MuiGrid-align-items-xs-center-21 SquareButtonComponent-btn-146"
          jutify="center"
        >
          <div
            class="MuiGrid-item-14 SquareButtonComponent-imgContainer-156"
          >
            <img
              alt="wallet-logo"
              class="SquareButtonComponent-btnLogo-149"
              src="drive-wallet-button.png"
            />
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnTitle-150"
            >
              Drive
            </p>
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnDesc-151"
            >
              Use Drive Wallet
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-item-14"
      >
        <div
          class="MuiGrid-container-13 MuiGrid-direction-xs-column-16 MuiGrid-align-items-xs-center-21 SquareButtonComponent-btn-146"
          jutify="center"
        >
          <div
            class="MuiGrid-item-14 SquareButtonComponent-imgContainer-156"
          >
            <img
              alt="wallet-logo"
              class="SquareButtonComponent-btnLogo-149"
              src="metamask-button.png"
            />
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnTitle-150"
            >
              Metamask
            </p>
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnDesc-151"
            >
              MetaMask Extension
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-item-14"
      >
        <div
          class="MuiGrid-container-13 MuiGrid-direction-xs-column-16 MuiGrid-align-items-xs-center-21 SquareButtonComponent-btnSelected-147"
          jutify="center"
        >
          <div
            class="MuiGrid-item-14 SquareButtonComponent-imgContainer-156"
          >
            <img
              alt="wallet-logo"
              class="SquareButtonComponent-btnLogo-149"
              src="ledger-button.png"
            />
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnTitleSelected-154"
            >
              Ledger
            </p>
          </div>
          <div
            class="MuiGrid-item-14"
          >
            <p
              class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-alignCenter-133 SquareButtonComponent-btnDescSelected-155"
            >
              Ledger Hardware Wallet
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-item-14"
  >
    <h6
      class="MuiTypography-root-110 MuiTypography-h6-127 MuiTypography-alignLeft-132"
    >
      Choose the coin
    </h6>
  </div>
  <div
    class="MuiGrid-item-14"
  >
    <ul
      class="MuiList-root-193 MuiList-padding-194 WalletSelectionComponent-cryptoList-2"
    >
      <div>
        <hr
          class="MuiDivider-root-197"
        />
        <div
          class="MuiButtonBase-root-183 MuiListItem-root-202 MuiListItem-default-205 MuiListItem-gutters-210 MuiListItem-button-211"
          id="ethereum"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiGrid-container-13 MuiGrid-align-items-xs-center-21 MuiGrid-justify-xs-space-between-32"
          >
            <span
              class="MuiButtonBase-root-183 MuiIconButton-root-223 MuiPrivateSwitchBase-root-219 MuiRadio-root-214 MuiRadio-colorPrimary-217"
            >
              <span
                class="MuiIconButton-label-228"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-229"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-222"
                  id="ethereum"
                  tabindex="-1"
                  type="radio"
                  value=""
                />
              </span>
            </span>
            <div
              class="MuiListItemText-root-238"
            >
              <span
                class="MuiTypography-root-110 MuiTypography-subheading-117 MuiListItemText-primary-241"
              >
                ETH
              </span>
              <p
                class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-242"
              >
                Ethereum
              </p>
            </div>
          </div>
          <span
            class="MuiTouchRipple-root-186"
          />
        </div>
      </div>
      <div>
        <hr
          class="MuiDivider-root-197"
        />
        <div
          class="MuiButtonBase-root-183 MuiListItem-root-202 MuiListItem-default-205 MuiListItem-gutters-210 MuiListItem-button-211"
          id="dai"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiGrid-container-13 MuiGrid-align-items-xs-center-21 MuiGrid-justify-xs-space-between-32"
          >
            <span
              class="MuiButtonBase-root-183 MuiIconButton-root-223 MuiPrivateSwitchBase-root-219 MuiRadio-root-214 MuiRadio-colorPrimary-217"
            >
              <span
                class="MuiIconButton-label-228"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-229"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-222"
                  id="dai"
                  tabindex="-1"
                  type="radio"
                  value=""
                />
              </span>
            </span>
            <div
              class="MuiListItemText-root-238"
            >
              <span
                class="MuiTypography-root-110 MuiTypography-subheading-117 MuiListItemText-primary-241"
              >
                DAI
              </span>
              <p
                class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-242"
              >
                Dai
              </p>
            </div>
          </div>
          <span
            class="MuiTouchRipple-root-186"
          />
        </div>
      </div>
      <div>
        <hr
          class="MuiDivider-root-197"
        />
        <div
          class="MuiButtonBase-root-183 MuiListItem-root-202 MuiListItem-default-205 MuiListItem-gutters-210 MuiListItem-button-211"
          id="bitcoin"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiGrid-container-13 MuiGrid-align-items-xs-center-21 MuiGrid-justify-xs-space-between-32"
          >
            <span
              class="MuiButtonBase-root-183 MuiIconButton-root-223 MuiPrivateSwitchBase-root-219 MuiRadio-root-214 MuiRadio-colorPrimary-217 MuiPrivateSwitchBase-checked-220 MuiRadio-checked-215"
            >
              <span
                class="MuiIconButton-label-228"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-229"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <input
                  checked=""
                  class="MuiPrivateSwitchBase-input-222"
                  id="bitcoin"
                  tabindex="-1"
                  type="radio"
                  value=""
                />
              </span>
            </span>
            <div
              class="MuiListItemText-root-238"
            >
              <span
                class="MuiTypography-root-110 MuiTypography-subheading-117 MuiListItemText-primary-241"
              >
                BTC
              </span>
              <p
                class="MuiTypography-root-110 MuiTypography-body1-119 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-242"
              >
                Bitcoin
              </p>
            </div>
          </div>
          <span
            class="MuiTouchRipple-root-186"
          />
        </div>
      </div>
      <hr
        class="MuiDivider-root-197"
      />
    </ul>
  </div>
  <div
    class="MuiGrid-item-14"
  />
  <div
    class="MuiGrid-item-14"
  >
    <div
      class="MuiGrid-container-13 MuiGrid-spacing-xs-24-37 MuiGrid-justify-xs-center-30"
    >
      <div
        class="MuiGrid-item-14"
      >
        <button
          class="MuiButtonBase-root-183 MuiButton-root-157 MuiButton-text-159 MuiButton-textPrimary-160 MuiButton-flat-162 MuiButton-flatPrimary-163"
          tabindex="0"
          to="/"
          type="button"
        >
          <span
            class="MuiButton-label-158"
          >
            Cancel Transfer
          </span>
          <span
            class="MuiTouchRipple-root-186"
          />
        </button>
      </div>
      <div
        class="MuiGrid-item-14"
      >
        <button
          class="MuiButtonBase-root-183 MuiButtonBase-disabled-184 MuiButton-root-157 MuiButton-contained-168 MuiButton-containedPrimary-169 MuiButton-raised-171 MuiButton-raisedPrimary-172 MuiButton-sizeLarge-181 MuiButton-disabled-177 MuiButton-fullWidth-182"
          disabled=""
          id="continue"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-158"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
